@@ -383,9 +383,9 @@ void %(classname)s::free()
             self.doc(4, 'Send the contents of this object to a Bridge.')
             self.write("    virtual void sendContents(Atlas::Bridge & b) const;\n")
             self.write("\n")
-            self.doc(4, 'Convert this object to a Element.')
-            self.write("    virtual const Atlas::Message::Element::MapType asMessage() const;\n")
-            self.write("\n")
+            # self.doc(4, 'Convert this object to a Element.')
+            # self.write("    virtual const Atlas::Message::Element::MapType asMessage() const;\n")
+            # self.write("\n")
             self.doc(4, 'Write this object to an existing Element.')
             self.write("    virtual void addToMessage(Atlas::Message::Element::MapType &) const;\n")
             self.write("\n")
@@ -406,7 +406,7 @@ void %(classname)s::free()
                                (cpp_type[attr.type], attr.name))
             self.write('\n')
             for attr in static_attrs:
-                self.write("    inline void send" + attr.cname)
+                self.write("    void send" + attr.cname)
                 self.write('(Atlas::Bridge&) const;\n')
         self.freelist_if()
         self.write("};\n\n")
@@ -418,7 +418,7 @@ void %(classname)s::free()
             self.static_inline_sets(obj, static_attrs)
             self.static_inline_gets(obj, static_attrs)
             self.static_inline_is_defaults(obj, static_attrs)
-            self.static_inline_sends(obj, static_attrs)
+            # self.static_inline_sends(obj, static_attrs)
             self.write('\n')
 
     def implementation_file (self, obj):
@@ -451,8 +451,9 @@ void %(classname)s::free()
             self.getattr_im(obj, static_attrs)
             self.setattr_im(obj, static_attrs)
             self.remattr_im(obj, static_attrs)
+            self.static_inline_sends(obj, static_attrs)
             self.sendcontents_im(obj, static_attrs)
-            self.asobject_im(obj, static_attrs)
+            #self.asobject_im(obj, static_attrs)
             self.addtoobject_im(obj, static_attrs)
         self.destructor_im(obj)
         self.instanceof_im(obj)
